# laptop-recommend-system

./: .env  .gitignore  CLAUDE.md  README.md  data.txt  docker-script.sh  example.md  laptop_config.owl  laptop_res.owl  laptops.owl  laptops_data.json  laptops_og.owl  ontology.ttl  populate-neo4j.py  populate_ontology.py  pyproject.toml  requirements.txt  sazo_laptops.csv  sazo_laptops.json  scraped_data_to_cipher_neo4j.py  scraper.py  seminar-structure.md  test.py
api/: main.py
api/db/: main.py  session.py
api/db/models/: laptop_model.py
api/models/: main.py
api/processor/: tracking_processor.py
api/routers/: chat_router.py  laptop_router.py  laptops.py  user_router.py
api/schemas/: chat_request_schema.py  fingerprint_schema.py  laptop.py  laptop_schema.py  schema.py
api/services/: chat_query_service.py  collab_filtering_service.py  fingerprint_utils.py  laptop.owl  laptop_service.py  recommendation_service.py  test_calling_colab.py  user_profile_service.py  user_profile_service_cypher.py  user_profile_service_example.py
api/services/recommendation_helper/: collab_filtering_service.py  laptop.owl  (+1 more)
cipher_outputs/: neo4j_import.cypher
data_process/populate/: populate-neo4j.py  populate-postgresql.py
data_process/process/: laptops_clean.owl  scraped_data_to_cipher_neo4j.py  scraped_data_to_owl.py  scraped_data_to_sql.py  tagging.py  test_model.py  transform_json_to_owl.py
data_process/scrape/: sample.json  sazo_laptops.json  sazo_laptops_enriched.json  scraper.py
outputs/: ontology+instances.ttl
utilities/: __init__.py  pg_connection.py
(+15 files in other folders)
